# senior-living-evaluator

./: .tool-versions  Makefile  README.md  pyproject.toml
scripts/: evaluate_communities.py  install.sh  load_communities_results.py  run_ruff.sh
senior_living_evaluator/: constant.py  models.py  rating_calculator.py  settings.py
senior_living_evaluator/cache/: cache.py
senior_living_evaluator/celery/: client.py  tasks.py
senior_living_evaluator/logger/: logging.py
