[tool.poetry]
name = "senior-living-evaluator"
version = "0.1.0"
description = ""
authors = ["Jose Hidalgo <joseangel1196@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.3"
celery = { version = "^5.3.6", extras = ["gevent", "redis"] }
redis = "^5.0.1"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
